# projeto_backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml
app/: main.py
app/core/: config.py  database.py  security.py
app/crud/: inventory.py  order.py  payment.py  product.py  unit.py  user.py
app/models/: __init__.py  inventory.py  order.py  payment.py  product.py  unit.py  user.py
app/routers/: auth.py  inventory.py  order.py  payment.py  product.py  unit.py  user.py
app/schemas/: inventory.py  order.py  payment.py  product.py  unit.py  user.py
app/services/: auth.py  inventory.py  order.py  payment.py
